# pocketpaw

./: .env.example  .env.meetings  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
ee/: README.md  api.py  pyproject.toml
ee/agent/pocket_specialist/: __init__.py  adapters.py  cli_tool.py  mcp_tool.py  runtime.py  tool.py  tools.py
ee/calendar/: __init__.py  conflicts.py  domain.py  dto.py  freebusy.py  policy.py  recurrence.py  router.py  service.py  sync.py
ee/cloud/: __init__.py  ripple_normalizer.py  ripple_sources.py
ee/cloud/_core/: __init__.py  context.py  csrf.py  deps.py  errors.py  http.py  ports.py  repository.py  time.py
ee/cloud/_core/realtime/: audience.py  bus.py  emit.py  events.py
ee/cloud/activity/: __init__.py  buffer.py
ee/cloud/agents/: domain.py  dto.py  knowledge.py  repositories.py  router.py  schemas.py  scope_rules.py  service.py
ee/cloud/audit/: router.py  service.py
ee/cloud/auth/: __init__.py  core.py  dto.py  repositories.py  router.py  service.py
ee/cloud/chat/: agent_router.py  agent_schemas.py  agent_service.py  domain.py  dto.py  group_service.py  message_service.py  repositories.py  ripple_content_patcher.py  router.py  schemas.py  service.py  unread_service.py  ws.py
ee/cloud/connectors/: CHARTER.md  __init__.py  domain.py  dto.py  router.py  service.py
ee/cloud/cycles/: __init__.py  domain.py  dto.py  router.py  scheduler.py  service.py  snapshot_job.py
ee/cloud/embeddings/: __init__.py  cost_tracker.py  factory.py  vertex_gemini2.py  vertex_mm001.py
ee/cloud/extraction/: __init__.py  chain.py  gemini_flash.py  local.py
ee/cloud/files/: __init__.py  abac_config.py  bootstrap.py  browse.py  dto.py  errors.py  events.py  mounts.yaml  mounts_config.py  permissions.py  registry.py  router.py  schemas.py  service.py  tree.py
ee/cloud/files/providers/: base.py  kb.py  uploads.py
ee/cloud/kb/: dto.py  knowledge_router.py  router.py  workspace_aggregator.py
ee/cloud/livekit/: __init__.py  agent.py  router.py  service.py
ee/cloud/memory/: __init__.py  bootstrap.py  documents.py  mongo_store.py
ee/cloud/mission_control/: __init__.py  domain.py  dto.py  router.py  service.py
ee/cloud/models/: __init__.py  agent.py  connector.py  cycle.py  group.py  message.py  notification.py  planner.py  pocket.py  project.py  read_state.py  session.py  task.py
ee/cloud/notifications/: domain.py  dto.py  repositories.py  router.py  schemas.py  service.py
ee/cloud/planner/: domain.py  dto.py  router.py  service.py
ee/cloud/pockets/: agent_context.py  domain.py  dto.py  journal_stream_router.py  repositories.py  router.py  service.py
ee/cloud/projects/: __init__.py  dto.py  router.py  service.py
ee/cloud/realtime/: audience.py  bus.py  emit.py  events.py
ee/cloud/sessions/: domain.py  dto.py  repositories.py  router.py  service.py  title_listener.py
ee/cloud/shared/: agent_bridge.py  db.py  deps.py  errors.py  time.py
ee/cloud/tasks/: __init__.py  domain.py  dto.py  listeners.py  router.py  service.py
ee/cloud/uploads/: folder_store.py  listeners.py  models.py  mongo_store.py  paths.py  resolver.py  router.py  service.py
ee/cloud/workspace/: __init__.py  dto.py  repositories.py  router.py  service.py
ee/docs/architecture/: pocket-mutation-channel.md  pockets-builder-design.md  surface-context-handler-guide.md  surface-context.md
ee/fabric/: router.py  store.py
ee/fleet/: installer.py  router.py
ee/instinct/: models.py  router.py  store.py
ee/pocketpaw_ee/: __init__.py  api.py  extensions.py
ee/pocketpaw_ee/agent/mcp_servers/: __init__.py  decisions.py  foresight.py  meetings.py  planner.py  pockets.py  tasks.py
ee/pocketpaw_ee/agent/pocket_router/: __init__.py  classifier.py  events.py  router.py
ee/pocketpaw_ee/agent/pocket_specialist/: __init__.py  adapters.py  cli_tool.py  mcp_tool.py  runtime.py  settings.py  tool.py  tools.py
ee/pocketpaw_ee/audit/: __init__.py
ee/pocketpaw_ee/automations/: __init__.py
ee/pocketpaw_ee/calendar/: __init__.py  _context.py  conflicts.py  domain.py  dto.py  events.py  freebusy.py  models.py  policy.py  recurrence.py  router.py  service.py  sync.py
ee/pocketpaw_ee/cloud/: SPEC-rbac.md  __init__.py  db.py  features.py  license.py  ripple_normalizer.py  ripple_resolver.py  ripple_sources.py  ripple_validator.py
ee/pocketpaw_ee/cloud/_core/: context.py  crypto.py  csrf.py  deps.py  ee_auth_bridge.py  http.py  internal_token.py  rate_limit.py  redis_client.py  temporal_scheduler.py  timing.py
ee/pocketpaw_ee/cloud/activity/: __init__.py  buffer.py
ee/pocketpaw_ee/cloud/agents/: __init__.py  dto.py  knowledge.py  router.py  scope_rules.py  service.py
ee/pocketpaw_ee/cloud/audit/: __init__.py  domain.py  dto.py  listeners.py  router.py  service.py  webhooks.py
ee/pocketpaw_ee/cloud/auth/: __init__.py  _login_helpers.py  api_keys.py  api_keys_dto.py  api_keys_router.py  core.py  domain.py  dto.py  mfa.py  mfa_tokens.py  (+7 more)
ee/pocketpaw_ee/fabric/: __init__.py  journal_store.py  policy.py  projection.py  registry.py  router.py  storage.py  store.py
ee/pocketpaw_ee/fleet/: __init__.py  installer.py  models.py  router.py
ee/pocketpaw_ee/foresight/: README.md  __init__.py  aggregator.py  calibration.py  decision_graph_ref.py  insights.py  insights_llm.py  instinct_bridge.py  persona.py  world.py
ee/pocketpaw_ee/guards/: __init__.py  abac.py  actions.py  audit.py  deps.py  policy.py  rbac.py
ee/pocketpaw_ee/instinct/: __init__.py  correction.py  correction_soul_bridge.py  models.py  router.py  store.py  trace.py  trace_collector.py
ee/pocketpaw_ee/paw_print/: __init__.py  models.py  router.py  store.py
ee/pocketpaw_ee/retrieval/: __init__.py  policy.py  projection.py  router.py  store.py
ee/pocketpaw_ee/ripple/: __init__.py  _inline.py  _inline_core.py  _pockets.py  manifest.py
ee/pocketpaw_ee/widget/: __init__.py  policy.py  projection.py  router.py  store.py
ee/ripple/: __init__.py  _design.py  _inline.py  _inline_core.py  _pockets.py  manifest.py
ee/widget/: policy.py  projection.py  router.py  store.py
(+1306 files in other folders)
